跨分支一致性审查基线（与 2.0.x/3.0.x 对齐）
## 审计范围
- 798 个共享 Java 源文件，跨 1.0.x/2.0.x/3.0.x 三分支
- 用 codegraph + Python 脚本系统化对比 throw 语句、null-check、Javadoc、import、方法签名

## 已修复的差异（结构性 + 命名）
1. RepositoryRegistry.java
   - throw IllegalStateException → throw BizRuntimeException（与 2.0.x/3.0.x 一致）
   - 查询消息措辞：register({}, ...) → register(modelClass, {}, ...)

2. DataScopeProvider/DataScopeAutoConfiguration
   - 接口方法改为 default + Objects.nonNull(data)
   - 配置类改用匿名类委托 default 方法

3. ReadinessReport/ReadinessResult
   - 移除冗余 requireNonNull + checkContributor null-result 检查
   - unavailable() 增加 StrKit.isBlank(reason) 守卫

4. FormatDateFunction（完全重写）
   - 对齐 2.0.x：FunctionArguments + DateTimeFormatter + TemporalAccessor

5. ExcelImporter.readAll
   - 异常吞 → 抛 BizRuntimeException(500, ...)

7. JsonMQEventSerialization
   - 手动 ObjectMapper → 委托 JsonKit

8. GlobalResponseRAdvice
   - BizRuntimeException("msg", e) → BizRuntimeException(e)

9. GlobalErrorAttributes
   - != null → Objects.nonNull()

10. MdcInterceptor/Slf4jMDCInterceptor
    - 内联 null-check → IpKit.parseRemoteAddr() 委托

11. CryptoException + 其他 22 个文件
    - 补充缺失的类级 Javadoc

## 包路径修复（关键）
12. event-store-jdbi/jpa/r2dbc 共 12 个文件
    - io.ddd4j.data.eventstore.* → io.ddd4j.data.event.store.*
    - git 自动识别为 rename，目录结构与 2.0.x 完全一致

## 已识别但未修复（待后续批次处理）
- 12 个文件 import 路径不一致（core.utils.JsonKit → kit.lang.JsonKit 等）
- 185+ 处 record→class 降级导致的访问器方法名差异
- 真实业务方法签名不一致（DataScopeSpan.evaluate 等）
- 部分 web framework 适配器方法（translate vs doTranslate、frameworkName 缺失）