@@ -14,6 +14,7 @@
  */
 package io.ddd4j.sample.helidon.cqrs;
 
+import java.util.Collections;
 import io.ddd4j.sample.helidon.cqrs.web.OrderResource;
 import jakarta.ws.rs.ApplicationPath;
 import jakarta.ws.rs.core.Application;
@@ -27,6 +28,6 @@ public class HelidonCqrsJaxRsApplication extends Application {
 
     @Override
     public Set<Class<?>> getClasses() {
-        return Set.of(OrderResource.class);
+        return Collections.singleton(OrderResource.class);
     }
 }
