@@ -14,6 +14,7 @@
  */
 package io.ddd4j.sample.helidon.cqrs.command;
 
+import java.util.Collections;
 import io.ddd4j.core.cqrs.command.Command;
 import io.ddd4j.core.cqrs.command.CommandExecutor;
 import io.ddd4j.core.cqrs.command.Result;
@@ -40,7 +41,7 @@ public class CreateOrderCommandHandler implements CommandExecutor<CreateOrderCom
 
     @Override
     public Set<Class<? extends Command>> supportedCommands() {
-        return Set.of(CreateOrderCommand.class);
+        return Collections.singleton(CreateOrderCommand.class);
     }
 
     @Override
