@@ -1,5 +1,6 @@
 package io.ddd4j.sample.javalin.satoken.order.domain.model;
 
+import java.util.Collections;
 import io.ddd4j.core.ddd.model.AggregateRoot;
 import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.javalin.satoken.order.domain.event.*;
@@ -49,7 +50,7 @@ public class Order extends AggregateRoot<String> {
     }
 
     public static Order draft(String orderNo, String buyerId, String buyerName) {
-        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName, OrderStatus.DRAFT, List.of());
+        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName, OrderStatus.DRAFT, Collections.emptyList());
         order.registerEvent(new OrderCreatedEvent(order.id()));
         return order;
     }
@@ -76,7 +77,7 @@ public class Order extends AggregateRoot<String> {
     }
 
     public List<OrderLine> lines() {
-        return List.copyOf(lines);
+        return Collections.unmodifiableList(new ArrayList<>(lines));
     }
 
     public Money totalAmount() {
