@@ -1,5 +1,6 @@
 package io.ddd4j.sample.javalin.shiro.order.infrastructure;
 
+import java.util.stream.Collectors;
 import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.javalin.shiro.order.domain.model.Money;
 import io.ddd4j.sample.javalin.shiro.order.domain.model.Order;
@@ -54,7 +55,7 @@ public class InMemoryOrderRepository implements OrderRepository {
         List<OrderLine> lines = Optional.ofNullable(row.lines).orElseGet(List::of).stream()
                 .map(lr -> new OrderLine(lr.id, lr.goodsId, lr.goodsName, lr.quantity,
                         new Money(lr.unitPrice, lr.currency)))
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
         return new Order(row.id, row.orderNo, row.buyerId, row.buyerName,
                 OrderStatus.valueOf(row.status), lines);
     }
@@ -82,7 +83,7 @@ public class InMemoryOrderRepository implements OrderRepository {
     public List<Order> findAll() {
         return rows.values().stream()
                 .map(InMemoryOrderRepository::toModel)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
     }
 
     // ============================ 模型与行转换 ============================
