@@ -1,5 +1,6 @@
 package io.ddd4j.sample.javalin.shiro.order.web;
 
+import java.util.stream.Collectors;
 import io.ddd4j.core.api.R;
 import io.ddd4j.sample.javalin.shiro.order.application.AddOrderLineCommand;
 import io.ddd4j.sample.javalin.shiro.order.application.CreateOrderCommand;
@@ -108,7 +109,7 @@ public class OrderResource {
             get("/orders", ctx -> {
                 List<OrderResponse> items = orderApplicationService.listAll().stream()
                         .map(OrderResponse::from)
-                        .toList();
+                        .collect(java.util.stream.Collectors.toList());
                 ctx.json(R.ok(items));
             });
 
@@ -123,7 +124,29 @@ public class OrderResource {
 
     /**
      * 折扣预览响应。
-     */
-    public record DiscountView(String amount, String currency) {
+     */public final class DiscountView {
+        private final String amount;
+        private final String currency;
+
+        public DiscountView(String amount, String currency) {
+            this.amount = amount;
+            this.currency = currency;
+        }
+        public String amount() { return amount; }
+        public String currency() { return currency; }
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) return true;
+            if (o == null || getClass() != o.getClass()) return false;
+        DiscountView other = (DiscountView) o;
+            return Objects.equals(this.amount, other.amount) && Objects.equals(this.currency, other.currency);
+        }
+        @Override
+        public int hashCode() { return java.util.Objects.hash(amount, currency); }
+        @Override
+        public String toString() {
+            return "DiscountView{" + "amount=" + amount + ", " + "currency=" + currency + "}";
+        }
+    
     }
 }
