@@ -1,5 +1,7 @@
 package io.ddd4j.sample.javalin.shiro.rbac;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Objects;
 
 import io.ddd4j.core.auth.AuthPrincipal;
@@ -55,13 +57,13 @@ public final class RbacConfig {
         // ==================== 种子用户 ====================
         // admin：admin 角色
         rbacService.saveUser(new User("admin", "admin123", "管理员",
-                Set.of("admin"), Set.of()));
+                Collections.singleton("admin"), Collections.singleton()));
         // zhangsan：user 角色（业务授权：直接拥有 order:pay）
         rbacService.saveUser(new User("zhangsan", "pass123", "张三",
-                Set.of("user"), Set.of("order:pay")));
+                Collections.singleton("user"), Collections.singleton("order:pay")));
         // lisi：user 角色（无额外权限）
         rbacService.saveUser(new User("lisi", "pass123", "李四",
-                Set.of("user"), Set.of()));
+                Collections.singleton("user"), Collections.singleton()));
     }
 
     /**
@@ -77,30 +79,30 @@ public final class RbacConfig {
             @Override
             public List<String> getPermissionList(AuthPrincipal principal) {
                 if (Objects.isNull(principal)) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 Object loginId = principal.getLoginId();
                 if (Objects.isNull(loginId)) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 return userRepository.findByLoginId(String.valueOf(loginId))
                         .map(rbacServicePerms(roleRepository))
-                        .orElse(List.of());
+                        .orElse(Collections.emptyList());
             }
 
             @Override
             public List<String> getRoleList(AuthPrincipal principal) {
                 if (Objects.isNull(principal)) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 Object loginId = principal.getLoginId();
                 if (Objects.isNull(loginId)) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 return userRepository.findByLoginId(String.valueOf(loginId))
                         .map(User::roles)
-                        .map(roles -> (List<String>) List.copyOf(roles))
-                        .orElse(List.of());
+                        .map(roles -> (List<String>) Collections.unmodifiableList(new ArrayList<>(roles)))
+                        .orElse(Collections.emptyList());
             }
         };
     }
@@ -115,7 +117,7 @@ public final class RbacConfig {
                 roleRepository.findByCode(roleCode)
                         .ifPresent(role -> allPerms.addAll(role.permissions()));
             }
-            return List.copyOf(allPerms);
+            return Collections.unmodifiableList(new ArrayList<>(allPerms));
         };
     }
 
